kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__expr_with_delim_3.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"[{a=2}\"####)"
---
Node {
    node: List(
        ListExpr {
            elts: [
                Node {
                    node: Config(
                        ConfigExpr {
                            items: [
                                Node {
                                    node: ConfigEntry {
                                        key: Some(
                                            Node {
                                                node: Identifier(
                                                    Identifier {
                                                        names: [
                                                            Node {
                                                                node: "a",
                                                                filename: "",
                                                                line: 1,
                                                                column: 2,
                                                                end_line: 1,
                                                                end_column: 3,
                                                            },
                                                        ],
                                                        pkgpath: "",
                                                        ctx: Load,
                                                    },
                                                ),
                                                filename: "",
                                                line: 1,
                                                column: 2,
                                                end_line: 1,
                                                end_column: 3,
                                            },
                                        ),
                                        value: Node {
                                            node: NumberLit(
                                                NumberLit {
                                                    binary_suffix: None,
                                                    value: Int(
                                                        2,
                                                    ),
                                                },
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 4,
                                            end_line: 1,
                                            end_column: 5,
                                        },
                                        operation: Override,
                                        insert_index: -1,
                                    },
                                    filename: "",
                                    line: 1,
                                    column: 2,
                                    end_line: 1,
                                    end_column: 5,
                                },
                            ],
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 6,
                },
            ],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}

