kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__lambda_expr_2.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"lambda x: int -> int {x}\"####)"
---
Node {
    node: Lambda(
        LambdaExpr {
            args: Some(
                Node {
                    node: Arguments {
                        args: [
                            Node {
                                node: Identifier {
                                    names: [
                                        Node {
                                            node: "x",
                                            filename: "",
                                            line: 1,
                                            column: 7,
                                            end_line: 1,
                                            end_column: 8,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                                filename: "",
                                line: 1,
                                column: 7,
                                end_line: 1,
                                end_column: 8,
                            },
                        ],
                        defaults: [
                            None,
                        ],
                        type_annotation_list: [
                            Some(
                                Node {
                                    node: "int",
                                    filename: "",
                                    line: 1,
                                    column: 10,
                                    end_line: 1,
                                    end_column: 13,
                                },
                            ),
                        ],
                        ty_list: [
                            Some(
                                Node {
                                    node: Basic(
                                        Int,
                                    ),
                                    filename: "",
                                    line: 1,
                                    column: 10,
                                    end_line: 1,
                                    end_column: 13,
                                },
                            ),
                        ],
                    },
                    filename: "",
                    line: 1,
                    column: 7,
                    end_line: 1,
                    end_column: 13,
                },
            ),
            return_type_str: Some(
                "int",
            ),
            body: [
                Node {
                    node: Expr(
                        ExprStmt {
                            exprs: [
                                Node {
                                    node: Identifier(
                                        Identifier {
                                            names: [
                                                Node {
                                                    node: "x",
                                                    filename: "",
                                                    line: 1,
                                                    column: 22,
                                                    end_line: 1,
                                                    end_column: 23,
                                                },
                                            ],
                                            pkgpath: "",
                                            ctx: Load,
                                        },
                                    ),
                                    filename: "",
                                    line: 1,
                                    column: 22,
                                    end_line: 1,
                                    end_column: 23,
                                },
                            ],
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 22,
                    end_line: 1,
                    end_column: 23,
                },
            ],
            return_ty: Some(
                Node {
                    node: Basic(
                        Int,
                    ),
                    filename: "",
                    line: 1,
                    column: 17,
                    end_line: 1,
                    end_column: 20,
                },
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 24,
}

